src/main/resources/css/dedicon-default.css
@page {
	size: 35 28;
	@top-center {
		content: string(print-page);
	}
	@top-right {
		content: counter(page);
	}
}

pagenum {
	display: none;
	string-set: print-page content();
}

head {
	display: none;
}

book {
	hyphens: auto;
}

p {
	display: block;
	text-indent: 1;
}

hd, h1, h2, h3, h4, h5, h6 {
	display: block;
	margin-top: 1;
	margin-bottom: 1;
	page-break-after: avoid;
}

level,
level1, level2, level3,
level4, level5, level6,
frontmatter, bodymatter, rearmatter {
	display: block;
	page-break-before: always;
	page-break-after: always;
}

doctitle, docauthor {
	margin-top: 2;
	margin-bottom: 2;
}

code {
	display: block;
	hyphens: none;
}

*[space=preserve] {
	white-space: pre-wrap;
}

